--- a/spidersdk/src/main/res/layout/activity_spider.xml
+++ b/spidersdk/src/main/res/layout/activity_spider.xml
@@ -5,81 +5,34 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ui.spider.SpiderActivity_">
+
     <RelativeLayout
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:background="@color/colorPrimary"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
+
         <ImageView
             android:id="@+id/back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/back"
-            android:padding="10dp"
             android:layout_centerVertical="true"
-            />
+            android:padding="10dp"
+            android:src="@drawable/back" />
+
         <TextView
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:textSize="18dp"
-            android:textColor="@color/white"
             android:text="爬取"
-            />
+            android:textColor="@color/white"
+            android:textSize="18dp" />
     </RelativeLayout>
-    <RelativeLayout
-        android:id="@+id/loading"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"
-        >
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:layout_centerInParent="true"
-            >
-            <ProgressBar
-                android:layout_width="25dp"
-                android:layout_height="25dp" />
-            <TextView
-                android:id="@+id/msg"
-                android:layout_marginLeft="15dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="正在加载..."
-                />
-        </LinearLayout>
-    </RelativeLayout>
-    <RelativeLayout
-        android:id="@+id/error_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white"
-        android:visibility="gone"
-        >
 
-        <ImageView
-            android:id="@+id/error"
-            android:paddingTop="-50dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/error_network"
-            android:layout_centerInParent="true"
-            />
-        <TextView
-            android:layout_below="@+id/error"
-            android:layout_marginTop="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textSize="14dp"
-            android:text="网络貌似有问题，请点击屏幕重试"
-            />
-    </RelativeLayout>
-    <FrameLayout
+
+    <RelativeLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -92,34 +45,106 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="gone">
+
             <wendu.spidersdk.CircleProgress
                 android:id="@+id/work_progress"
                 android:layout_width="200dp"
-                android:layout_centerInParent="true"
-                android:layout_height="200dp" />
+                android:layout_height="200dp"
+                android:layout_centerInParent="true" />
+
             <TextView
                 android:id="@+id/percentage"
-                android:layout_centerInParent="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
                 android:text="0%"
-                android:textSize="30dp"
-                />
+                android:textSize="30dp" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/error_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:visibility="gone">
+
+            <ImageView
+                android:id="@+id/error"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:paddingTop="-50dp"
+                android:src="@drawable/network_error" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/error"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:textColor="@color/c2"
+                android:text="网络貌似有问题，请点击屏幕重试"
+                android:textSize="14dp" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/loading"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/windowBackground"
+            android:visibility="gone">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:gravity="center_vertical">
+
+                <ProgressBar
+                    android:layout_width="25dp"
+                    android:layout_height="25dp" />
+
+                <TextView
+                    android:id="@+id/msg"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:text="正在加载..." />
+            </LinearLayout>
+
         </RelativeLayout>
 
         <TextView
             android:id="@+id/init"
-            android:visibility="gone"
-            android:background="@color/white"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/windowBackground"
             android:gravity="center"
-            android:textColor="@color/text_color_light"
+            android:visibility="gone"
             android:text="首次加载初始化中..."
-            />
+            android:textColor="@color/text_color_light"
+           />
 
-      </FrameLayout>
 
+
+        <TextView
+            android:id="@+id/webcore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_margin="15dp"
+            android:background="@color/black_transparent_60"
+            android:paddingBottom="5dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="5dp"
+            android:text="webcore:--"
+            android:textColor="@color/white"
+            android:textSize="13dp"
+            android:visibility="gone" />
+
+    </RelativeLayout>
 </LinearLayout>
 
 
