--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,6 +48,17 @@
             android:text="邮箱爬取"
             android:textColor="@color/white" />
 
+        <TextView
+            android:id="@+id/jd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/b1_press_selector"
+            android:elevation="2dp"
+            android:padding="10dp"
+            android:text="京东爬取"
+            android:textColor="@color/white" />
+
 
         <TextView
             android:id="@+id/url"
