--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,7 +95,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:background="@drawable/b1_press_selector"
+        android:background="@drawable/b2_press_selector"
         android:elevation="2dp"
         android:padding="10dp"
         android:textAlignment="center"
@@ -104,15 +104,15 @@
 
     <TextView
         android:id="@+id/log"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:background="@drawable/b1_press_selector"
+        android:background="@drawable/b2_press_selector"
         android:elevation="2dp"
         android:padding="10dp"
+        android:textAlignment="center"
         android:text="查看上次爬取日志"
         android:textColor="@color/white"
-        android:visibility="gone"
         />
 
 
