--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,39 @@
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/unicom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/b1_press_selector"
+            android:elevation="2dp"
+            android:padding="10dp"
+            android:onClick="openUnicomMobileCall"
+            android:layout_marginTop="15dp"
+            android:textColor="@color/white"
+            android:text="联通通话详单"/>
+
+        <TextView
+            android:id="@+id/mobile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/b1_press_selector"
+            android:elevation="2dp"
+            android:padding="10dp"
+            android:text="移动通话详单"
+            android:textColor="@color/white" />
+
+        <TextView
+            android:id="@+id/alipay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/b1_press_selector"
+            android:elevation="2dp"
+            android:padding="10dp"
+            android:text="支付宝"
+            android:textColor="@color/white" />
 
 
         <TextView
@@ -77,17 +110,7 @@
             android:text="淘宝爬取"
             android:textColor="@color/white" />
 
-        <TextView
-            android:id="@+id/mobile_unicom"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/b1_press_selector"
-            android:elevation="2dp"
-            android:padding="10dp"
-            android:onClick="openUnicomMobileCall"
-            android:layout_marginTop="15dp"
-            android:textColor="@color/white"
-            android:text="联通通话详单"/>
+
     </LinearLayout>
 
     <TextView
