--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,10 @@
 
         </LinearLayout>
 
-
+        <!--<wendu.spidersdk.DSpiderView-->
+            <!--android:id="@+id/dspier_view"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="800dp" />-->
 
         <TextView
             android:id="@+id/email"
