--- a/spidersdk/src/main/res/layout/activity_spider.xml
+++ b/spidersdk/src/main/res/layout/activity_spider.xml
@@ -43,10 +43,17 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <FrameLayout
-            android:id="@+id/fragment"
+        <RelativeLayout
+            android:id="@+id/webview_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            >
+            <wendu.spidersdk.DSWebview
+                android:id="@+id/webview"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+           </RelativeLayout>
         <RelativeLayout
             android:id="@+id/spider"
             android:layout_width="match_parent"
@@ -73,6 +80,16 @@
                 android:layout_marginTop="40dp"
                 android:layout_centerHorizontal="true"
                  />
+            <TextView
+                android:id="@+id/progress_msg"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:textAlignment="center"
+                android:layout_marginTop="30dp"
+                android:layout_below="@id/work_progress"
+                android:text="正在初始化任务..."
+                />
             <TextView
                 android:id="@+id/percentage"
                 android:layout_width="wrap_content"
