--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<wendu.common.widget.BounceScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="wendu.androidcommonlibs.ResultActivity">
-    <ListView
-        android:id="@+id/list"
+    android:fillViewport="true"
+    android:scrollbars="none">
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:dividerHeight="1px"
-        />
-
-</RelativeLayout>
+        android:orientation="vertical"
+        android:id="@+id/root"
+        tools:context="wendu.spiderandroid.ResultActivity"></LinearLayout>
+</wendu.common.widget.BounceScrollView>
