--- a/app/src/main/res/layout/activity_email.xml
+++ b/app/src/main/res/layout/activity_email.xml
@@ -4,10 +4,12 @@
     android:id="@+id/activity_email"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context="wendu.spiderandroid.EmailActivity">
 
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
+        android:dividerHeight="1px"
         android:layout_height="match_parent"></ListView>
 </RelativeLayout>
