--- a/app/src/main/res/layout/email_item.xml
+++ b/app/src/main/res/layout/email_item.xml
@@ -5,7 +5,8 @@
     android:paddingLeft="8dp"
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
-    android:gravity="center_vertical"
+    android:background="@color/white"
+    android:gravity="center"
     android:layout_height="match_parent">
 
     <ImageView
@@ -13,9 +14,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/text"
-        android:layout_marginLeft="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    <!--<TextView-->
+    <!--android:id="@+id/text"-->
+    <!--android:layout_marginLeft="20dp"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content" />-->
 </LinearLayout>
