--- a/app/src/main/res/layout/activity_email.xml
+++ b/app/src/main/res/layout/activity_email.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context="wendu.spiderandroid.EmailActivity">
+    tools:context="wendu.spider.EmailActivity">
 
     <ListView
         android:id="@+id/list_view"
