--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -8,11 +8,11 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="wendu.spiderandroid.test.TestActivity">
+    tools:context="wendu.spider.test.TestActivity">
 
-    <wendu.spiderandroid.test.SynWebView
+    <wendu.spider.test.SynWebView
         android:id="@+id/synWebView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></wendu.spiderandroid.test.SynWebView>
+        android:layout_height="match_parent"></wendu.spider.test.SynWebView>
 
 </RelativeLayout>
