--- a/app/src/main/res/layout/activity_data_read.xml
+++ b/app/src/main/res/layout/activity_data_read.xml
@@ -14,6 +14,7 @@
             android:id="@+id/text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:textIsSelectable="true"
             android:padding="16dp"
             android:lineSpacingExtra="3dp"
             android:text=""
