--- a/spidersdk/src/main/res/layout/dspider_view.xml
+++ b/spidersdk/src/main/res/layout/dspider_view.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"  >
-<wendu.spidersdk.DSWebView
+<wendu.spidersdk.DSWebview
     android:id="@+id/ds_webview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"/>
