--- a/spidersdk/src/main/res/layout/activity_spider.xml
+++ b/spidersdk/src/main/res/layout/activity_spider.xml
@@ -124,6 +124,7 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/bg_bottom"
                 android:layout_marginTop="40dp"
+                  android:scaleType="centerCrop"
                 android:layout_below="@id/progress_msg"
                 />
               <View
