--- a/spidersdk/src/main/res/layout/activity_spider.xml
+++ b/spidersdk/src/main/res/layout/activity_spider.xml
@@ -33,7 +33,7 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="爬取"
-            android:textColor="@color/white"
+            android:textColor="@color/grey"
             android:textSize="18dp" />
     </RelativeLayout>
     </LinearLayout>
@@ -74,13 +74,31 @@
                 android:paddingRight="19dp"
                 android:paddingBottom="14dp"
                 android:src="@drawable/back_dark" />
-            <wendu.spidersdk.CircleProgress
-                android:id="@+id/work_progress"
+            <RelativeLayout
+                android:id="@+id/progress_container"
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-                android:layout_marginTop="40dp"
+
                 android:layout_centerHorizontal="true"
-                 />
+                android:layout_below="@+id/back_gray"
+                >
+                <wendu.spidersdk.CircleProgress
+                    android:id="@+id/work_progress"
+                    android:layout_width="170dp"
+                    android:layout_height="170dp"
+                    android:layout_marginTop="40dp"
+                    android:layout_centerInParent="true"
+                    />
+                <TextView
+                    android:id="@+id/percentage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="0%"
+                    android:textColor="#555"
+                    android:layout_centerInParent="true"
+                    android:textSize="30dp" />
+            </RelativeLayout>
+
             <TextView
                 android:id="@+id/progress_msg"
                 android:layout_width="match_parent"
@@ -88,19 +106,10 @@
                 android:singleLine="true"
                 android:textAlignment="center"
                 android:layout_marginTop="30dp"
-                android:layout_below="@id/work_progress"
+                android:layout_below="@id/progress_container"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:text="" />
-
-            <TextView
-                android:id="@+id/percentage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="115dp"
-                android:text="0%"
-                android:layout_centerHorizontal="true"
-                android:textSize="30dp" />
 
             <wendu.spidersdk.WaveProgress
                 android:id="@+id/wave"
@@ -109,6 +118,7 @@
                 android:layout_alignParentBottom="true"
                 />
         </RelativeLayout>
+
 
         <RelativeLayout
             android:id="@+id/error_layout"
@@ -163,17 +173,6 @@
             </LinearLayout>
 
         </RelativeLayout>
-
-        <TextView
-            android:id="@+id/init"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/windowBackground"
-            android:gravity="center"
-            android:visibility="gone"
-            android:text="首次加载初始化中..."
-            android:textColor="@color/text_color_light"
-           />
 
     </RelativeLayout>
 </LinearLayout>
