--- a/spidersdk/src/main/res/layout/activity_spider.xml
+++ b/spidersdk/src/main/res/layout/activity_spider.xml
@@ -76,6 +76,16 @@
                 android:paddingBottom="14dp"
                 android:src="@drawable/back_dark" />
             <TextView
+                android:id="@+id/hidden"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="隐藏"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentTop="true"
+                android:layout_margin="16dp"
+                android:visibility="gone"
+                />
+            <TextView
                 android:id="@id/title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
